--- a/index.css
+++ b/index.css
@@ -122,13 +122,23 @@ h1, h2 {
     border-bottom: 1px solid #FF725E;
     border-radius: 0 0 8px 8px;
     margin-top: -8px;
+    padding: 0 24px;
+    overflow: hidden;
+    height: 0;
+    opacity: 0;
+    transition: .3s;
+}
+
+.duvida.ativa .paragrafo {
+    height: fit-content;
     padding: 24px;
+    opacity: 1;
 }
 
 footer {
     background-color: rgba(255, 152, 108, 0.25);
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between  ;
     gap: 80px;
     padding: 64px 80px;
 }
