--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ header {
     background-color: #FF9A6C;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     padding: 24px 80px;
 }
 
@@ -22,6 +22,10 @@ header nav a {
     font-weight: 600;
     padding: 32px;
     text-decoration: none;
+}
+
+section {
+    height: 100vh;
 }
 
 #inicio {
